<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mainActivity"
        android:title="@string/search" />

    <item
        android:id="@+id/accountActivity"
        android:title="@string/account"/>
</menu>