<resources>
    <string name="app_name">Score Reporter</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="login">login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_sign_up">New? Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="account">Account</string>
    <string name="search">Search</string>
    <string name="name_caps">NAME</string>
    <string name="email_caps">EMAIL</string>
    <string name="teams_caps">TEAMS</string>
    <string name="logout">logout</string>
    <string name="follow">follow</string>
    <string name="dash">-</string>
    <string name="games">games</string>
    <string name="vs">vs.</string>
</resources>